# docs/swagger.json
@@ -444,6 +444,62 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Creates a new message.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "messages"
+                ],
+                "summary": "Create message",
+                "parameters": [
+                    {
+                        "description": "Message payload",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateMessageDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/dto.MessageDto"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/exceptions.HttpError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/exceptions.HttpError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/exceptions.HttpError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/exceptions.HttpError"
+                        }
+                    }
+                }
             }
         },
         "/chats/{chatId}/typing": {
@@ -489,64 +545,6 @@
                     },
                     "401": {
                         "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/exceptions.HttpError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/exceptions.HttpError"
-                        }
-                    }
-                }
-            }
-        },
-        "/messages/": {
-            "post": {
-                "description": "Creates a new message.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "messages"
-                ],
-                "summary": "Create message",
-                "parameters": [
-                    {
-                        "description": "Message payload",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.CreateMessageDto"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/dto.MessageDto"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/exceptions.HttpError"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/exceptions.HttpError"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/exceptions.HttpError"
                         }
@@ -830,7 +828,7 @@
                 "role": {
                     "$ref": "#/definitions/dto.Role"
                 },
-                "target_id": {
+                "targetId": {
                     "type": "integer"
                 }
             }
@@ -849,7 +847,7 @@
         "dto.ChatDto": {
             "type": "object",
             "properties": {
-                "created_at": {
+                "createdAt": {
                     "type": "string"
                 },
                 "creator": {
@@ -886,9 +884,6 @@
         "dto.CreateChatDto": {
             "type": "object",
             "properties": {
-                "creator_id": {
-                    "type": "integer"
-                },
                 "description": {
                     "type": "string"
                 },
@@ -900,9 +895,6 @@
         "dto.CreateMessageDto": {
             "type": "object",
             "properties": {
-                "chat_id": {
-                    "type": "integer"
-                },
                 "content": {
                     "type": "string"
                 }
@@ -950,8 +942,14 @@
                 "content": {
                     "type": "string"
                 },
+                "createdAt": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
+                },
+                "updatedAt": {
+                    "type": "string"
                 },
                 "user": {
                     "$ref": "#/definitions/dto.UserDto"
